--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "composer/installers": "~1.0",
         "elasticsearch/elasticsearch": "~6.0",
+        "guzzlehttp/guzzle": "~6.3",
         "monolog/monolog": "~1.0"
     },
     "minimum-stability": "dev"
