--- a/elasticsearch_manager.routing.yml
+++ b/elasticsearch_manager.routing.yml
@@ -63,12 +63,11 @@ elasticsearch_manager.api.batch:
     _access: 'TRUE'
     from: '^\d+$'
     
-elasticsearch_manager.api.checkindex:
+elasticsearch_manager.checkindex:
   path: '/elasticsearch/checkindex'
   defaults:
     _controller: '\Drupal\elasticsearch_manager\Controller\ApiController::checkIndex'
     _title: 'ElasticSearch Manager'
-    from: 0
   requirements:
     _access: 'TRUE'
     
